<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    android:gravity="center">

    <TextView
        android:id="@+id/itemDetailFirstSizeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/food_detail_size"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemDetailFirstSizePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/food_detail_price"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/itemDetailFoodRemoveItemFirstSize"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/itemDetailFoodRemoveItemFirstSize"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginEnd="4dp"
        android:background="@drawable/minus_circle"
        android:backgroundTint="#000"
        android:contentDescription="@string/remove_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/itemDetailFoodItemFirstSizeNumber"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemDetailFoodItemFirstSizeNumber"
        android:layout_width="20dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/item_number_hint"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/itemDetailFoodAddItemFirstSize"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/itemDetailFoodAddItemFirstSize"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:background="@drawable/plus_circle"
        android:backgroundTint="#000"
        android:contentDescription="@string/add_item"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>