<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:layout_width="150dp"
    android:layout_height="150dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/itemFoodImage"
        android:background="@color/colorPrimary"
        android:layout_width="140dp"
        android:layout_height="140dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:contentDescription="@string/food_image"/>

    <ImageView
        android:id="@+id/itemFoodNameHolder"
        android:background="#616161"
        android:layout_width="140dp"
        android:layout_height="20dp"
        android:alpha="0.5"
        android:elevation="2dp"
        android:translationZ="2dp"
        app:layout_constraintBottom_toBottomOf="@id/itemFoodImage"
        app:layout_constraintLeft_toLeftOf="@id/itemFoodImage"
        app:layout_constraintRight_toRightOf="@id/itemFoodImage"
        android:contentDescription="@string/food_name_holder"/>

    <TextView
        android:text="@string/food_name_goes_here"
        android:id="@+id/itemFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#FFF"
        android:elevation="2dp"
        android:translationZ="2dp"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/itemFoodNameHolder"
        app:layout_constraintTop_toTopOf="@id/itemFoodNameHolder"
        app:layout_constraintLeft_toLeftOf="@id/itemFoodNameHolder"
        app:layout_constraintRight_toRightOf="@id/itemFoodNameHolder"/>


</android.support.constraint.ConstraintLayout>