<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp">

    <ImageView
        android:id="@+id/itemDetailFoodCloseWindow"
        android:background="@drawable/close_circle"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:contentDescription="@string/close_window"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        />

    <ImageView
        android:id="@+id/itemDetailFoodImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="#000"
        android:contentDescription="@string/food_image_description"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemDetailFoodName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/food_name_goes_here"
        android:textSize="15sp"
        app:layout_constraintBottom_toTopOf="@id/itemDetailFoodDescription"
        app:layout_constraintLeft_toRightOf="@+id/itemDetailFoodImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/itemDetailFoodDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/food_description_goes_here"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/itemDetailFoodImage"
        app:layout_constraintLeft_toRightOf="@id/itemDetailFoodImage"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemDetailFoodName" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/itemDetailFoodMultipleSizes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toBottomOf="@id/recommendedDrinkLinearLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/itemDetailFoodImage"/>

    <LinearLayout
        android:id="@+id/recommendedDrinkLinearLayout"
        android:layout_width="320dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/itemDetailFoodMultipleSizes"
        app:layout_constraintTop_toBottomOf="@id/itemDetailFoodDescription"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp">

        <TextView
            android:text="@string/recommended_drinks"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/itemDetailFoodRecommendedDrinkViewHolder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scrollbars="vertical"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>